<resources>
    <string name="app_name">PontusGoalTracker</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="background">background</string>
    <string name="register">Register</string>
    <string name="name">Username</string>
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="remember_me">Remember Me</string>
    <string name="social_login">Social Login</string>
    <string name="already_">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="login">Login</string>
    <string name="new_user">New User?</string>
    <string name="icon">icon</string>
    <string name="title_activity_goal_list">GoalListActivity</string>
    <string name="add_new_goal">Add New Goal</string>
    <string name="goal_detail">Goal Title</string>
    <string name="choose_date">Deadline Date</string>
    <string name="settings">Settings</string>
    <string name="confirm">confirm</string>
    <string name="add_task">Add task +</string>
    <string name="checkedtextview">CheckedTextView</string>
    <string name="goal_name">Goal Name</string>
    <string name="goal_type">Goal Type</string>
    <string name="goal_date">Goal Date</string>
    <string name="percent">%</string>
    <string name="_100">100</string>
    <string name="goal_description">Goal Description</string>
    <string name="tasks">Tasks :</string>
</resources>
